[gd_scene load_steps=4 format=3 uid="uid://c64vn37hu4m21"]

[ext_resource type="Script" path="res://PlayerCharacter/player_character.gd" id="1_ma2eh"]
[ext_resource type="Texture2D" uid="uid://cffm0f1gcjxpg" path="res://icon.svg" id="1_osatw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0rhsx"]
size = Vector2(130, 130.5)

[node name="PlayerCharacter" type="CharacterBody2D"]
script = ExtResource("1_ma2eh")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_osatw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.625)
scale = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_0rhsx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
one_shot = true

[node name="ControlCooldown" type="Timer" parent="."]
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_dashcooldown_timeout"]
[connection signal="timeout" from="ControlCooldown" to="." method="_on_control_cooldown_timeout"]
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
